--- a/app.json
+++ b/app.json
@@ -1,36 +1,62 @@
-{
-  "expo": {
+{"expo": {
     "name": "Drift",
     "slug": "drift",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#3B82F6"
     },
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.drift.app"
     },
     "android": {
+      "package": "com.drift.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#3B82F6"
       },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "permissions": [
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_COARSE_LOCATION"
+      ],
+      "googleServicesFile": "./google-services.json"
     },
+    "plugins": [
+      "expo-router",
+      "expo-location",
+      "expo-secure-store",
+      "expo-notifications",
+      "expo-dev-client",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "compileSdkVersion": 34,
+            "targetSdkVersion": 34,
+            "buildToolsVersion": "34.0.0"
+          }
+        }
+      ],
+      "@react-native-firebase/app",
+      "@react-native-google-signin/google-signin"
+    ],
+    "scheme": "drift",
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "extra": {
+      "router": {
+        "origin": false
+      },
       "eas": {
         "projectId": "d7b6f22f-7d74-4cc2-b3c6-89ceece434fc"
       }
-    },
-    "owner": "giselle345"
+    }
   }
 }
