--- a/package.json
+++ b/package.json
@@ -1,18 +1,45 @@
 {
   "name": "drift",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "prebuild": "expo prebuild",
+    "build:android": "eas build --platform android --profile development",
+    "build:production": "eas build --platform android --profile production"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-firebase/app": "^23.4.1",
+    "@react-native-google-signin/google-signin": "^16.0.0",
+    "@tanstack/react-query": "^5.90.5",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.14",
+    "expo-build-properties": "~1.0.9",
+    "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.15",
+    "expo-file-system": "~19.0.17",
+    "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
+    "expo-notifications": "~0.32.12",
+    "expo-router": "~6.0.13",
+    "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.4"
+    "firebase": "^12.4.0",
+    "nativewind": "^4.2.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-native": "0.81.4",
+    "react-native-maps": "1.20.1",
+    "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-vector-icons": "^10.3.0",
+    "tailwindcss": "^3.4.18",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
