--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-router": "~6.0.13",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~0.27.4",
     "nativewind": "^4.2.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
