--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "prebuild": "expo prebuild",
     "build:android": "eas build --platform android --profile development",
     "build:production": "eas build --platform android --profile production"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^21.8.1",
     "@react-native-firebase/auth": "^21.8.1",
     "@react-native-firebase/firestore": "^21.8.1",
@@ -22,25 +22,25 @@
     "@tanstack/react-query": "^5.90.5",
     "date-fns": "^4.1.0",
     "expo": "~52.0.0",
-    "expo-build-properties": "~1.0.9",
-    "expo-constants": "~18.0.9",
-    "expo-dev-client": "~6.0.15",
-    "expo-file-system": "~19.0.17",
-    "expo-linking": "~8.0.8",
-    "expo-location": "~19.0.7",
-    "expo-notifications": "~0.32.12",
-    "expo-router": "~6.0.13",
-    "expo-secure-store": "~15.0.7",
-    "expo-status-bar": "~3.0.8",
+    "expo-build-properties": "~0.13.3",
+    "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
+    "expo-file-system": "~18.0.12",
+    "expo-linking": "~7.0.5",
+    "expo-location": "~18.0.10",
+    "expo-notifications": "~0.29.14",
+    "expo-router": "~4.0.21",
+    "expo-secure-store": "~14.0.1",
+    "expo-status-bar": "~2.0.1",
     "expo-updates": "~0.27.4",
     "nativewind": "^4.2.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
-    "react-native-maps": "1.20.1",
+    "react-native": "0.76.9",
+    "react-native-maps": "1.18.0",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.3.0",
     "tailwindcss": "^3.4.18",
     "zustand": "^5.0.8"
