--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-maps": "^1.26.18",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
