--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/functions": "^21.8.1",
     "@react-native-firebase/storage": "^21.8.1",
     "@react-native-google-signin/google-signin": "^16.0.0",
+    "@stripe/stripe-react-native": "^0.55.1",
     "@tanstack/react-query": "^5.90.5",
     "date-fns": "^4.1.0",
     "expo": "~52.0.0",
@@ -42,6 +43,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.18",
     "zustand": "^5.0.8"
   },
