--- a/eas.json
+++ b/eas.json
@@ -12,7 +12,7 @@
       },
       "env": {
         "EXPO_USE_UPDATES": "0",
-        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "YOUR_ACTUAL_KEY",
+        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "$EXPO_PUBLIC_GOOGLE_MAPS_API_KEY",
         "NODE_ENV": "development"
       },
       "channel": "development"
@@ -21,6 +21,9 @@
       "distribution": "internal",
       "android": {
         "buildType": "apk"
+      },
+      "env": {
+        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "$EXPO_PUBLIC_GOOGLE_MAPS_API_KEY"
       }
     },
     "production": {
@@ -28,7 +31,7 @@
         "buildType": "apk"
       },
        "env": {
-        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "YOUR_ACTUAL_KEY",
+        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "$EXPO_PUBLIC_GOOGLE_MAPS_API_KEY",
         "NODE_ENV": "production"
       }
     }
