--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.20",
     "expo-file-system": "~18.0.12",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.10",
     "expo-notifications": "~0.29.14",
@@ -38,7 +39,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-maps": "^1.26.18",
+    "react-native-maps": "^1.21.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/react": "~18.3.1",
+    "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.9.2"
   },
