--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@expo/config-plugins": "^54.0.2",
     "@types/react": "~18.3.1",
     "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
