--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-router": "~4.0.21",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
+    "expo-task-manager": "~12.0.6",
     "expo-updates": "~0.27.4",
     "nativewind": "^4.2.1",
     "react": "18.3.1",
