--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,13 @@ EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.firebasestorage.app
 EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 EXPO_PUBLIC_FIREBASE_APP_ID=your_app_id
 
-# Google Maps API Key
+# Google Maps API Key (for native Maps SDK - can be restricted to Android/iOS)
 # Get from Google Cloud Console > APIs & Services > Credentials
 EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# Google Places API Key (for web/JavaScript calls - must be unrestricted or HTTP referrer restricted)
+# Get from Google Cloud Console > APIs & Services > Credentials
+EXPO_PUBLIC_GOOGLE_PLACES_API_KEY=your_google_places_api_key_here
 
 # App Configuration
 EXPO_PUBLIC_APP_NAME=Drift
