--- a/eas.json
+++ b/eas.json
@@ -13,6 +13,7 @@
       "env": {
         "EXPO_USE_UPDATES": "0",
         "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "$EXPO_PUBLIC_GOOGLE_MAPS_API_KEY",
+        "EXPO_PUBLIC_GOOGLE_PLACES_API_KEY": "$EXPO_PUBLIC_GOOGLE_PLACES_API_KEY",
         "NODE_ENV": "development"
       },
       "channel": "development"
@@ -23,7 +24,8 @@
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "$EXPO_PUBLIC_GOOGLE_MAPS_API_KEY"
+        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "$EXPO_PUBLIC_GOOGLE_MAPS_API_KEY",
+        "EXPO_PUBLIC_GOOGLE_PLACES_API_KEY": "$EXPO_PUBLIC_GOOGLE_PLACES_API_KEY"
       }
     },
     "production": {
@@ -32,6 +34,7 @@
       },
        "env": {
         "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "$EXPO_PUBLIC_GOOGLE_MAPS_API_KEY",
+        "EXPO_PUBLIC_GOOGLE_PLACES_API_KEY": "$EXPO_PUBLIC_GOOGLE_PLACES_API_KEY",
         "NODE_ENV": "production"
       }
     }
