DIRECTIONS_API_KEY implemented

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,91 @@
 # Firebase Configuration
 # Get these values from Firebase Console > Project Settings > General
-EXPO_PUBLIC_FIREBASE_API_KEY=your_firebase_api_key_here
-EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
-EXPO_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
-EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.firebasestorage.app
-EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
-EXPO_PUBLIC_FIREBASE_APP_ID=your_app_id
+EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSyBVlIxPPtHptBJgn31epJHlSMCDXI6wXWQ
+EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=drift-cayman.firebaseapp.com
+EXPO_PUBLIC_FIREBASE_PROJECT_ID=drift-345ky
+EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=drift-345ky.firebasestorage.app
+EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1096886791573
+EXPO_PUBLIC_FIREBASE_APP_ID=1:1096886791573:android:fad909fb8a163752345a9c
 
-# Google Maps API Key (for native Maps SDK - can be restricted to Android/iOS)
-# Get from Google Cloud Console > APIs & Services > Credentials
-EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+# ===================================================================
+# GOOGLE MAPS API KEYS - THREE KEY SYSTEM FOR SECURITY
+# ===================================================================
 
-# Google Places API Key (for web/JavaScript calls - must be unrestricted or HTTP referrer restricted)
-# Get from Google Cloud Console > APIs & Services > Credentials
-EXPO_PUBLIC_GOOGLE_PLACES_API_KEY=your_google_places_api_key_here
+# 1. MAPS SDK API KEY (Android/iOS App Restricted)
+# Purpose: Native MapView rendering only
+# Restrictions: Android apps (with SHA-1 fingerprint) + iOS apps (with bundle ID)
+# APIs Required: 
+#   - Maps SDK for Android
+#   - Maps SDK for iOS
+#   - Geocoding API (optional)
+# This key is embedded in the native app and used by MapView component
+EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyDjk96AyKGgPJRhzBRH7VY2qTsEsuvIq0g
+
+# 2. PLACES API KEY (HTTP Referrer Restricted OR Unrestricted)
+# Purpose: Place autocomplete, place search, place details
+# Restrictions: HTTP referrers (for web) OR None (for mobile JavaScript calls)
+# APIs Required:
+#   - Places API
+#   - Places API (New)
+#   - Geocoding API
+# Used for: Search bars, autocomplete dropdowns, place lookups
+EXPO_PUBLIC_GOOGLE_PLACES_API_KEY=AIzaSyBUK62EvV_-M7rtIGssC7IyGHvE9hKBWtQ
+
+# 3. DIRECTIONS API KEY (Unrestricted OR Backend IP Restricted)
+# Purpose: Directions, routes, distance calculations
+# Restrictions: None OR IP addresses (if you have a backend server)
+# APIs Required:
+#   - Directions API
+#   - Distance Matrix API
+#   - Geocoding API
+# Used for: Route calculations, turn-by-turn directions, ETA calculations
+# 
+# IMPORTANT: Create this NEW key in Google Cloud Console!
+# Until you create this key, the app will fall back to PLACES API key
+# which should have Directions API enabled as well.
+EXPO_PUBLIC_GOOGLE_DIRECTIONS_API_KEY=YOUR_NEW_DIRECTIONS_API_KEY_HERE
+
+# ===================================================================
+# HOW TO CREATE THE DIRECTIONS API KEY:
+# ===================================================================
+# 1. Go to: https://console.cloud.google.com/apis/credentials
+# 2. Click "Create Credentials" > "API Key"
+# 3. Name it: "Drift - Directions API"
+# 4. Click "Restrict Key"
+# 5. Under "API restrictions" select "Restrict key"
+# 6. Check these APIs:
+#    ✓ Directions API
+#    ✓ Distance Matrix API  
+#    ✓ Geocoding API
+# 7. Under "Application restrictions":
+#    - Choose "None" (for mobile apps)
+#    - OR "IP addresses" if you'll proxy through a backend
+# 8. Save and copy the key here
+# ===================================================================
 
 # App Configuration
 EXPO_PUBLIC_APP_NAME=Drift
 EXPO_PUBLIC_APP_VERSION=1.0.0
+
+# ===================================================================
+# TROUBLESHOOTING:
+# ===================================================================
+# If maps don't show:
+# 1. Check that all API keys are present
+# 2. Verify APIs are enabled in Google Cloud Console
+# 3. Check Android SHA-1 fingerprint is added (for MAPS key)
+# 4. Rebuild the app: npx expo prebuild --clean
+# 5. Create development build: npx expo run:android
+# 6. Check logs: npx expo start --dev-client
+#
+# If directions fail:
+# 1. Ensure Directions API is enabled
+# 2. Check that DIRECTIONS key has correct APIs enabled
+# 3. Monitor requests in Google Cloud Console > APIs & Services > Metrics
+# 4. Look for 4xx errors indicating permission issues
+#
+# If places search fails:
+# 1. Ensure Places API and Places API (New) are enabled
+# 2. For mobile, PLACES key restrictions should be "None" or "HTTP referrers"
+# 3. Check that you're not hitting quota limits
+# ===================================================================
