removal of keys

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,11 @@
 # Firebase Configuration
 # Get these values from Firebase Console > Project Settings > General
-EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSyBVlIxPPtHptBJgn31epJHlSMCDXI6wXWQ
-EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=drift-cayman.firebaseapp.com
-EXPO_PUBLIC_FIREBASE_PROJECT_ID=drift-345ky
-EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=drift-345ky.firebasestorage.app
-EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1096886791573
-EXPO_PUBLIC_FIREBASE_APP_ID=1:1096886791573:android:fad909fb8a163752345a9c
-
+EXPO_PUBLIC_FIREBASE_API_KEY=api key here
+EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN= 
+EXPO_PUBLIC_FIREBASE_PROJECT_ID= 
+EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET= 
+EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID= 
+EXPO_PUBLIC_FIREBASE_APP_ID=
 # ===================================================================
 # GOOGLE MAPS API KEYS - THREE KEY SYSTEM FOR SECURITY
 # ===================================================================
@@ -19,7 +18,7 @@ EXPO_PUBLIC_FIREBASE_APP_ID=1:1096886791573:android:fad909fb8a163752345a9c
 #   - Maps SDK for iOS
 #   - Geocoding API (optional)
 # This key is embedded in the native app and used by MapView component
-EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyDjk96AyKGgPJRhzBRH7VY2qTsEsuvIq0g
+EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=api key here
 
 # 2. PLACES API KEY (HTTP Referrer Restricted OR Unrestricted)
 # Purpose: Place autocomplete, place search, place details
@@ -29,7 +28,7 @@ EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyDjk96AyKGgPJRhzBRH7VY2qTsEsuvIq0g
 #   - Places API (New)
 #   - Geocoding API
 # Used for: Search bars, autocomplete dropdowns, place lookups
-EXPO_PUBLIC_GOOGLE_PLACES_API_KEY=AIzaSyBUK62EvV_-M7rtIGssC7IyGHvE9hKBWtQ
+EXPO_PUBLIC_GOOGLE_PLACES_API_KEY=api key here
 
 # 3. DIRECTIONS API KEY (Unrestricted OR Backend IP Restricted)
 # Purpose: Directions, routes, distance calculations
