--- a/eas.json
+++ b/eas.json
@@ -12,8 +12,8 @@
       },
       "env": {
         "EXPO_USE_UPDATES": "0",
-        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "$EXPO_PUBLIC_GOOGLE_MAPS_API_KEY",
-        "EXPO_PUBLIC_GOOGLE_PLACES_API_KEY": "$EXPO_PUBLIC_GOOGLE_PLACES_API_KEY",
+        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "AIzaSyD94ZFCQvkJjyqjIGFmZ7ASpZX9vRvwbjk",
+        "EXPO_PUBLIC_GOOGLE_PLACES_API_KEY": "AIzaSyA6o3LcssB-jT0qosUEsmVG3rQ-6uWyncc",
         "NODE_ENV": "development"
       },
       "channel": "development"
@@ -24,8 +24,8 @@
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "$EXPO_PUBLIC_GOOGLE_MAPS_API_KEY",
-        "EXPO_PUBLIC_GOOGLE_PLACES_API_KEY": "$EXPO_PUBLIC_GOOGLE_PLACES_API_KEY"
+        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "AIzaSyD94ZFCQvkJjyqjIGFmZ7ASpZX9vRvwbjk",
+        "EXPO_PUBLIC_GOOGLE_PLACES_API_KEY": "AIzaSyA6o3LcssB-jT0qosUEsmVG3rQ-6uWyncc"
       }
     },
     "production": {
@@ -33,8 +33,8 @@
         "buildType": "apk"
       },
        "env": {
-        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "$EXPO_PUBLIC_GOOGLE_MAPS_API_KEY",
-        "EXPO_PUBLIC_GOOGLE_PLACES_API_KEY": "$EXPO_PUBLIC_GOOGLE_PLACES_API_KEY",
+        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "AIzaSyD94ZFCQvkJjyqjIGFmZ7ASpZX9vRvwbjk",
+        "EXPO_PUBLIC_GOOGLE_PLACES_API_KEY": "AIzaSyA6o3LcssB-jT0qosUEsmVG3rQ-6uWyncc",
         "NODE_ENV": "production"
       }
     }
