--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:production": "eas build --platform android --profile production"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^21.8.1",
     "@react-native-firebase/auth": "^21.8.1",
     "@react-native-firebase/firestore": "^21.8.1",
