--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^4.1.0",
     "expo": "~52.0.0",
     "expo-build-properties": "~0.13.3",
+    "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.20",
     "expo-file-system": "~18.0.12",
@@ -39,8 +40,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-maps": "^1.21.0",
+    "react-native-maps": "1.18.0",
     "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.3.0",
