--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-dev-client": "~5.0.20",
     "expo-file-system": "~18.0.12",
     "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.10",
     "expo-notifications": "~0.29.14",
