--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-firebase/app": "^21.8.1",
     "@react-native-firebase/auth": "^21.8.1",
     "@react-native-firebase/firestore": "^21.8.1",
     "@react-native-firebase/functions": "^21.8.1",
     "@react-native-firebase/storage": "^21.8.1",
     "@react-native-google-signin/google-signin": "^16.0.0",
+    "@react-native-picker/picker": "2.9.0",
     "@tanstack/react-query": "^5.90.5",
     "date-fns": "^4.1.0",
     "expo": "~52.0.0",
     "expo-build-properties": "~0.13.3",
+    "expo-camera": "~16.0.18",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.20",
+    "expo-document-picker": "~13.0.3",
     "expo-file-system": "~18.0.12",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
