--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-firebase/app": "^21.8.1",
-    "@react-native-firebase/auth": "^21.8.1",
-    "@react-native-firebase/firestore": "^21.8.1",
+    "@react-native-firebase/app": "^21.14.0",
+    "@react-native-firebase/auth": "^21.14.0",
+    "@react-native-firebase/firestore": "^21.14.0",
     "@react-native-firebase/functions": "^21.8.1",
     "@react-native-firebase/storage": "^21.8.1",
     "@react-native-google-signin/google-signin": "^16.0.0",
@@ -24,10 +24,12 @@
     "@tanstack/react-query": "^5.90.5",
     "date-fns": "^4.1.0",
     "expo": "~52.0.0",
+    "expo-auth-session": "^7.0.8",
     "expo-build-properties": "~0.13.3",
     "expo-camera": "~16.0.18",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
+    "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.20",
     "expo-document-picker": "~13.0.3",
     "expo-file-system": "~18.0.12",
@@ -35,12 +37,14 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.10",
+    "expo-modules-core": "~2.2.3",
     "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.21",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "expo-task-manager": "~12.0.6",
     "expo-updates": "~0.27.4",
+    "expo-web-browser": "~14.0.2",
     "nativewind": "^4.2.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
