--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/auth": "^21.14.0",
     "@react-native-firebase/firestore": "^21.14.0",
@@ -45,6 +46,7 @@
     "expo-task-manager": "~12.0.6",
     "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.2",
+    "firebase": "^12.6.0",
     "nativewind": "^4.2.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
