--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/auth": "^21.14.0",
     "@react-native-firebase/firestore": "^21.14.0",
-    "@react-native-firebase/functions": "^21.8.1",
+    "@react-native-firebase/functions": "^21.14.0",
     "@react-native-firebase/storage": "^21.8.1",
     "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-native-picker/picker": "2.9.0",
@@ -58,6 +58,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.18",
     "zustand": "^5.0.8"
   },
