--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-firebase/storage": "^21.8.1",
     "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-native-picker/picker": "2.9.0",
+    "@stripe/stripe-react-native": "0.38.6",
     "@tanstack/react-query": "^5.90.5",
     "date-fns": "^4.1.0",
     "expo": "~52.0.0",
