--- a/package.json
+++ b/package.json
@@ -35,14 +35,17 @@
     "expo-dev-client": "~5.0.20",
     "expo-document-picker": "~13.0.3",
     "expo-file-system": "~18.0.12",
+    "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.10",
     "expo-modules-core": "~2.2.3",
     "expo-notifications": "~0.29.14",
+    "expo-print": "~14.0.3",
     "expo-router": "~4.0.21",
     "expo-secure-store": "~14.0.1",
+    "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
     "expo-task-manager": "~12.0.6",
     "expo-updates": "~0.27.4",
