--- a/functions/package.json
+++ b/functions/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.6.0",
-    "stripe": "^20.0.0"
+    "stripe": "^20.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
