--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/geolocation": "^3.4.0",
-    "@react-native-firebase/app": "^23.5.0",
-    "@react-native-firebase/auth": "^23.5.0",
-    "@react-native-firebase/firestore": "^23.5.0",
-    "@react-native-firebase/functions": "^23.5.0",
-    "@react-native-firebase/messaging": "^23.5.0",
-    "@react-native-firebase/storage": "^23.5.0",
+    "@react-native-firebase/analytics": "^23.7.0",
+    "@react-native-firebase/app": "^23.7.0",
+    "@react-native-firebase/auth": "^23.7.0",
+    "@react-native-firebase/crashlytics": "^23.7.0",
+    "@react-native-firebase/firestore": "^23.7.0",
+    "@react-native-firebase/functions": "^23.7.0",
+    "@react-native-firebase/messaging": "^23.7.0",
+    "@react-native-firebase/perf": "^23.7.0",
+    "@react-native-firebase/storage": "^23.7.0",
     "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-native-picker/picker": "2.9.0",
     "@stripe/stripe-react-native": "0.38.6",
@@ -65,6 +68,7 @@
     "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.2",
     "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "nativewind": "^4.2.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
