--- a/firebase.json
+++ b/firebase.json
@@ -85,5 +85,8 @@
       "port": 4000
     },
     "singleProjectMode": true
+  },
+  "extensions": {
+    "firestore-send-email": "firebase/firestore-send-email@0.2.4"
   }
 }
