--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>693488691443-shj0qjsljq12ptnmsabv8pvtv97t67p8.apps.googleusercontent.com</string>
+	<string>693488691443-apptk3ch39tlek643asp72ihj9tadl9d.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.693488691443-shj0qjsljq12ptnmsabv8pvtv97t67p8</string>
+	<string>com.googleusercontent.apps.693488691443-apptk3ch39tlek643asp72ihj9tadl9d</string>
 	<key>ANDROID_CLIENT_ID</key>
-	<string>693488691443-405ee7n9dc2u8agf89krs489u6a6f06o.apps.googleusercontent.com</string>
+	<string>693488691443-pmjrvmemkudlbma58u4bkivfppf55t66.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBgTHXDC1ieKqr8GIW0pwydOr3A7uCy3w0</string>
 	<key>GCM_SENDER_ID</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.drift.app</string>
+	<string>com.drift.global</string>
 	<key>PROJECT_ID</key>
 	<string>drift-global</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:693488691443:ios:6e384b14362cd03e26af86</string>
+	<string>1:693488691443:ios:04ae4e526559d97626af86</string>
 </dict>
 </plist>
