--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "date-fns": "^4.1.0",
     "expo": "~52.0.0",
+    "expo-apple-authentication": "~7.1.3",
     "expo-auth-session": "^7.0.8",
     "expo-build-properties": "~0.13.3",
     "expo-camera": "~16.0.18",
@@ -58,6 +59,7 @@
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.10",
     "expo-modules-core": "~2.2.3",
+    "expo-network": "~7.0.5",
     "expo-notifications": "~0.29.14",
     "expo-print": "~14.0.3",
     "expo-router": "~4.0.21",
